--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <a href="#Studio">Studio</a>
-          <a href="#Portfolio">Portfolio</a>
-          <a href="#Contacts">Contacts</a>
+          <li><a href="#Studio">Studio</a></li>
+          <li><a href="#Portfolio">Portfolio</a></li>
+          <li><a href="#Contacts">Contacts</a></li>
         </ul>
       </nav>
       <adress>
         <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li><a href="tel:110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </adress>
     </header>
@@ -32,7 +30,7 @@
       <!--Section 1-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Oder Service</button>
+        <button type="button" name="Oder Service">Oder Service</button>
       </section>
 
       <!--Секція 2-->
