--- a/index.html
+++ b/index.html
@@ -16,50 +16,54 @@
           <li><a href="#Contacts">Contacts</a></li>
         </ul>
       </nav>
-      <adress>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
-      </adress>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Oder Service</button>
+        <button type="button">Order Service</button>
       </section>
 
       <section>
         <h2>Effective Solutions for Your Business</h2>
-
-        <h3>Strategy</h3>
         <ul>
           <li>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-
-          <h3>Punctuality</h3>
+        </ul>
+        <h3>Punctuality</h3>
+        <ul>
           <li>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-
-          <h3>Diligence</h3>
+        </ul>
+        <h3>Diligence</h3>
+        <ul>
           <li>
             <p>
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-
-          <h3>Technologies</h3>
+        </ul>
+        <h3>Technologies</h3>
+        <ul>
           <li>
             <p>
               Design practice focused on digital experiences. We bring forth a
@@ -73,22 +77,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./image/mark.jpg" alt="Mark Guerrero" width="264" />
+            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./image/tom.jpg" alt="Tom Ford" width="264" />
+            <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./image/camila.jpg" alt="Camila Garcia" width="264" />
+            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./image/daniel.jpg" alt="Daniel Wilson" width="264" />
+            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
