--- a/index.html
+++ b/index.html
@@ -18,12 +18,8 @@
       </nav>
       <address>
         <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -43,28 +39,25 @@
               perfect and creative solution.
             </p>
           </li>
-        </ul>
-        <h3>Punctuality</h3>
-        <ul>
+
           <li>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-        </ul>
-        <h3>Diligence</h3>
-        <ul>
+
           <li>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-        </ul>
-        <h3>Technologies</h3>
-        <ul>
+
           <li>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
