--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="<https://fonts.googleapis.com>" />
+    <link rel="preconnect" href="<https://fonts.gstatic.com>" crossorigin />
     <title>Webstudio</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
@@ -30,7 +33,7 @@
       </section>
 
       <section>
-        <h2>Effective Solutions for Your Business</h2>
+        <h2 hidden>About</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
